kt-sym/kubernetes/kt-sym-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kt-sym-service
spec:
  selector:
    app: kt-sym
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
